openjdk-application/base/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openjdk-web-basic-s2i
    application: openjdk-app
  name: openjdk-app
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    deploymentConfig: openjdk-app
