openjdk-application/base/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: openjdk-web-basic-s2i
    application: openjdk-app
  name: openjdk-app
spec:
  host: ""
  to:
    kind: Service
    name: openjdk-app
    weight: 100
